mengganti foto jumbotron

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/Insecure Pose.jpg" alt="Ghufron" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/ghufron.jpg" alt="Ghufron" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-md-4 mb-3">Ghufron</h1>
       <p class="lead">Student | Web Programing</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
